mobile: fixed alignment of text on UserAccount, fixed weird scrolling on UserAccount, added panning to Table on PlayerView

--- a/neuro_arcade/reactapp/src/styles/index.css
+++ b/neuro_arcade/reactapp/src/styles/index.css
@@ -3,6 +3,10 @@
   src: url('../static/fonts/Exo_2/Exo2-VariableFont_wght.ttf') format('truetype');
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: 'Exo_2', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
